# SwarnDB

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  docker-compose.benchmark.yml  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml  docker.yml  python-sdk.yml
benchmark/: qps_vs_recall.py
benchmark/dbpedia_1m/: download_dataset.py  stage1_insert.py
benchmarks/: perf_benchmark.py
crates/vf-core/: Cargo.toml
crates/vf-core/src/: distance.rs  lib.rs  simd.rs  store.rs  text_norm.rs  types.rs  vector.rs
crates/vf-extraction/: Cargo.toml
crates/vf-extraction/src/: adapter.rs  cache.rs  config.rs  corpus.rs  cost.rs  crypto.rs  diff.rs  error.rs  lib.rs  manager.rs  ontology.rs  openai.rs  pipeline.rs  prompt.rs  resolution.rs  writer.rs
crates/vf-graph/: Cargo.toml
crates/vf-graph/src/: compute.rs  error.rs  graph_delta.rs  lib.rs  lru.rs  model.rs  persistence.rs  predicate.rs  propagation.rs  query.rs  refinement.rs  store.rs  temporal.rs  traversal.rs  typed_delta.rs  typed_persistence.rs  types.rs  weight.rs
crates/vf-index/: Cargo.toml
crates/vf-index/benches/: concurrency.rs
crates/vf-index/examples/: ann_benchmark.rs  profile_hnsw.rs
crates/vf-index/src/: arena.rs  brute_force.rs  flat_adj.rs  hnsw.rs  hnsw_delta.rs  hnsw_persistence.rs  hnsw_types.rs  ivf_hnsw_pq.rs  lib.rs  mmap_store.rs  parallel_build.rs  prefetch.rs  quantized_arena.rs  quantized_hnsw.rs  traits.rs
crates/vf-quantization/: Cargo.toml
crates/vf-quantization/benches/: quantization.rs
crates/vf-quantization/src/: binary.rs  bq_distance.rs  error.rs  ivf.rs  kmeans.rs  lib.rs  pq_distance.rs  product.rs  scalar.rs  sq_distance.rs  sq_simd.rs
crates/vf-query/: Cargo.toml
crates/vf-query/src/: batch.rs  eval.rs  filter.rs  index_bitmap.rs  index_btree.rs  index_hash.rs  index_manager.rs  lib.rs  strategy.rs
crates/vf-query/src/hybrid/: builder.rs  error.rs  exec.rs  mod.rs  plan.rs  predicate.rs
crates/vf-query/src/vector_math/: analogy.rs  centroid.rs  cone.rs  diversity.rs  drift.rs  ghost.rs  interpolation.rs  kmeans.rs  mod.rs  pca.rs
crates/vf-server/: Cargo.toml  build.rs
crates/vf-server/src/: auth.rs  bulk_checkpoint_token.rs  bulk_insert_from_path.rs  concurrency.rs  config.rs  convert.rs  edge_ops.rs  extraction_graph_writer.rs  grpc_collection.rs  grpc_extraction.rs  grpc_graph.rs  grpc_search.rs  grpc_vector.rs  grpc_vector_math.rs  health.rs  lib.rs  logging.rs  main.rs  metrics.rs  rest.rs  shutdown.rs  snapshot.rs  state.rs  validation.rs
crates/vf-storage/: Cargo.toml
crates/vf-storage/src/: atomic_write.rs  backup.rs  bulk_checkpoint.rs  collection.rs  compaction.rs  disk_ann.rs  error.rs  file_lock.rs  format.rs  lib.rs  mmap.rs  recovery.rs  restore.rs  segment.rs  tiered.rs  util.rs  wal.rs
data/test/: config.json
docs/: api-reference.md  benchmarks.md  bulk-ingestion.md  configuration.md  core-concepts.md  deployment.md  docker.md  getting-started.md  graph-first-class.md  graph-guide.md  known-issues.md  llm-extraction.md  python-sdk.md  quantization.md  vector-math.md  virtual-graph.md
helm/swarndb/: Chart.yaml  values.yaml
helm/swarndb/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  limitrange.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml
proto/swarndb/v1/: collection.proto  common.proto  extraction.proto  graph.proto  search.proto  vector.proto  vector_math.proto
sdk/python/: MANIFEST.in  README.md  pyproject.toml
sdk/python/proto/: generate.sh
sdk/python/scripts/: publish.sh
sdk/python/src/swarndb/: __init__.py  _helpers.py  _version.py  async_client.py  client.py  collections.py  exceptions.py  extraction.py  graph.py  hybrid.py  math_ops.py  numpy_utils.py  search.py  types.py  vectors.py
sdk/python/src/swarndb/_proto/: __init__.py  collection_pb2.py  collection_pb2.pyi  collection_pb2_grpc.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  extraction_pb2.py  extraction_pb2.pyi  extraction_pb2_grpc.py  graph_pb2.py  graph_pb2.pyi  graph_pb2_grpc.py  search_pb2.py  search_pb2.pyi  search_pb2_grpc.py  vector_math_pb2.py  vector_math_pb2.pyi  vector_math_pb2_grpc.py  vector_pb2.py  vector_pb2.pyi  vector_pb2_grpc.py
tests/: quick_10k_test.py  test_bulk_insert_from_path.py  test_bulk_vs_single_crossover.py  test_chunk_compact_insert.py  test_concurrent_search_under_write.py  test_d1_collision_concurrent.py  test_memory_release.py  test_p03_checkpoint_resume.py  test_p03_resume_after_kill.py  test_perf_stability_threading.py  test_persistence_compaction.py  test_persistence_concurrent.py  test_persistence_corruption.py  test_persistence_crash.py  test_persistence_delta.py  test_persistence_file_lock.py  test_persistence_recovery_time.py  test_persistence_restart.py  test_persistence_shutdown_marker.py  test_persistence_wal_pruning.py  test_recall_ground_truth.py  test_recovery_at_scale.py  test_sdk_ops_at_scale.py
