[package]
name = "vf-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Core vector types, distance functions, and traits for SwarnDB"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
ordered-float = { workspace = true }
num-traits = { workspace = true }
half = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
