[package]
name = "vf-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "HNSW and other index implementations for SwarnDB"

[dependencies]
vf-core = { path = "../vf-core" }
vf-quantization = { path = "../vf-quantization" }
serde = { workspace = true }
thiserror = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
lz4_flex = { workspace = true }
crc32fast = { workspace = true }
memmap2 = { workspace = true }
dashmap = { workspace = true }
bytemuck = { workspace = true }
libc = { workspace = true }

# ADR-025: ctl surface for the post-optimize arena purge. Gated to
# non-MSVC x86_64 / aarch64; a no-op shim covers every other target.
[target.'cfg(all(not(target_env = "msvc"), any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
tikv-jemalloc-ctl = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
vf-core = { path = "../vf-core" }

[[bench]]
name = "concurrency"
harness = false

[[example]]
name = "ann_benchmark"
path = "examples/ann_benchmark.rs"
