[package]
name = "vf-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "gRPC and REST server for SwarnDB"

[dependencies]
vf-core = { path = "../vf-core" }
vf-storage = { path = "../vf-storage" }
vf-index = { path = "../vf-index" }
vf-query = { path = "../vf-query" }
vf-graph = { path = "../vf-graph" }
vf-extraction = { path = "../vf-extraction" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
npyz = { workspace = true }
bytemuck = { workspace = true }
nix = { workspace = true }
memmap2 = { workspace = true }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
base64 = "0.22"

# ADR-025: jemalloc global allocator plus the ctl surface for the
# post-optimize arena purge. Gated to non-MSVC x86_64 / aarch64.
[target.'cfg(all(not(target_env = "msvc"), any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
tikv-jemallocator = { workspace = true }
tikv-jemalloc-ctl = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
