[package]
name = "vf-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Storage engine with WAL, mmap segments, and crash recovery for SwarnDB"

[dependencies]
vf-core = { path = "../vf-core" }
vf-quantization = { path = "../vf-quantization" }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
memmap2 = { workspace = true }
crc32fast = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }
